- layout is botched in that scaling is not correct; previous revision scaling was sometimes bad (to much zoom, i.e. very small slide) when ESC-aping out of overview mode. Previous revisions also exhibited jumping/oddities in the slide animations as the scale would change per slide at dom.slides level, which is a no-go if you want smooth animations.
- synced up the jolicode index page.

- only allow scrollbars to show up when we actually have a 'scrollable' page in sight; hence not in overview mode or while looking at any other individual slide!

--- a/css/reveal.css
+++ b/css/reveal.css
@@ -61,7 +61,7 @@
     text-shadow: none;
 }
 
-.reveal-viewport .slides-wrapper {
+.reveal-viewport .slides-wrapper.scrollable-slide {
     /* ensure that 'scrollable slides' are indeed scrollable: position=absolute prevents the scrollbar from showing up */
     overflow: auto;
     position: relative;
